fixed overflow problem

--- a/main/static/main/styles.css
+++ b/main/static/main/styles.css
@@ -737,6 +737,8 @@ p {
 
 #post-view-body-div {
     padding: 0px 16px 8px 16px;
+    overflow: hidden;
+    overflow-wrap: break-word;
 }
 
 .side-wrapper{
@@ -912,8 +914,10 @@ p {
 }
 
 #modal-comment-box {
-    max-height: 154px;
+    max-height: 134px;
+    width: 100%;
     overflow-y: auto;
+    overflow-wrap: break-word;
     margin-bottom: 16px;
 }
 
